@@ -947,6 +947,8 @@ body {
 
 <p><strong>no_stash</strong> | <code>["ignore", "private", "shared", "all"]</code> | If not set to &lsquo;ignore&rsquo;, this item will not be able to be put in the corresponding stash.</p>
 
+<p><strong>item.script</strong> | <code>filename</code> | Loads and executes a script file when the item is activated from the player&rsquo;s inventory.</p>
+
 <hr />
 
 <h4>ItemManager: Types</h4>
@@ -1352,6 +1354,8 @@ body {
 <p><strong>color_npc</strong> | <code>color, int : Color, Alpha</code> | Color used for NPCs.</p>
 
 <p><strong>color_teleport</strong> | <code>color, int : Color, Alpha</code> | Color used for intermap teleports.</p>
+
+<p><strong>button_config</strong> | <code>point</code> | Position of the &lsquo;Configuration&rsquo; button. The button will be hidden if not defined.</p>
 
 <hr />
 
