@@ -26,6 +26,7 @@ Engine features:
 * The 'categories' property has been extended to the player character. The Power property 'target_categories' can now be used for the player as a result.
 * The ability to stash quest items can now be controlled with the 'no_stash' property.
 * Added a button for opening the pause/configuration menu as part of the minimap.
+* Added 'script' property to items. This removes the need to create a power in order to execute a script via activating an item.
 
 Engine fixes:
 
